Minor changes to final commit

--- a/public/assignment/client/views/field/field.view.html
+++ b/public/assignment/client/views/field/field.view.html
@@ -51,7 +51,7 @@
                             <div class="col-sm-3 col-sm-push-2">
                                 <a href=""><span class="glyphicon glyphicon-pencil input-group-addon" aria-hidden="true"></span></a>
                                 <a href="" ng-click="cloneField(field, $index)"><span class="glyphicon glyphicon-plus input-group-addon" aria-hidden="true"></span></a>
-                                <a href="" ng-click="deleteField(field)"><span class="glyphicon glyphicon-remove input-group-addon" aria-hidden="true"></span></a>
+                                <a href="" ng-click="removeField(field)"><span class="glyphicon glyphicon-remove input-group-addon" aria-hidden="true"></span></a>
                                 <a href=""><span class="glyphicon glyphicon-align-justify input-group-addon" aria-hidden="true"></span></a>
                             </div>
                         </div>
