--- a/public/assignment/client/views/form/form.view.html
+++ b/public/assignment/client/views/form/form.view.html
@@ -35,7 +35,7 @@
                     <!--<td onclick="location.href='form-fields.html'"> {{form.name}} </td>-->
                     <!--<td> {{form.name}} </td>-->
                     <td>
-                    <a ng-click="gotoFormFields(form)">{{form.title}}</a>
+                    <a ng-click="formFields(form)">{{form.title}}</a>
                     </td>
                     <td>
                         <a ng-click="deleteForm(form.id)">
