Still fixing bugs

--- a/public/assignment/client/views/form/form.view.html
+++ b/public/assignment/client/views/form/form.view.html
@@ -3,7 +3,7 @@
     <div ng-if="user">
         <h1 class="page-header">Forms</h1>
         <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="#/forms">Forms</a></li>
+            <li id="formsTab" class="active"><a href="#/forms">Forms</a></li>
             <li id="fieldsTab" ><a ng-href="#/user/{{user.id}}/form/null/fields" ng->Fields</a></li>
             <!--<li role="presentation"><a href="form-fields.html">Fields</a>-->
             <!--<li role="presentation">Fields</li>-->
