--- a/public/assignment/client/views/register/register.view.html
+++ b/public/assignment/client/views/register/register.view.html
@@ -46,7 +46,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-disabled="userForm.$invalid"
-                        ng-click="register()">Register</button>
+                        ng-click="model.register(user)">Register</button>
             </div>
         </div>
     </form>
