--- a/public/assignment/client/views/sidebar/sidebar.view.html
+++ b/public/assignment/client/views/sidebar/sidebar.view.html
@@ -4,6 +4,6 @@
         <li ng-class="{'active': $location.url() == '/home' || $location.url().length === 1}"><a href="#/home">Home</a></li>
         <li ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
         <li ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
-        <li ng-class="{'active': $location.url() == '/forms' || $location.url().indexOf('user') != -1}"><a href="#/forms">Forms</a></li>
+        <li ng-class="{'active': $location.url() == '/forms' || $location.url().indexOf('field') != -1}"><a href="#/forms">Forms</a></li>
     </ul>
 </div>
