--- a/public/assignment/client/views/field/field.view.html
+++ b/public/assignment/client/views/field/field.view.html
@@ -1,98 +1,89 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <div class="" ng-if="user">
-        <div ng-if="selectedForm">
-            <h1 class="page-header">Fields: {{selectedForm.title}}</h1>
-            <ul class="nav nav-tabs">
-                <li role="presentation"><a href="#/forms">Forms</a></li>
-                <li role="presentation" class="active"><a ng-href="#/user/{{user.id}}/form/{{selectedForm.id}}/fields" ng->Fields</a></li>
-            </ul>
-            <br/> <br/>
-            <div class="table-responsive" id="Forms-field">
-                <form class="form-horizontal">
-                    <div ng-if="newField.type && false" class="form-group col-xs-12" ng-repeat="(key, value) in newField[newField.type]">
-                        <li>{{key}}</li>
-                    </div>
-                    <div class="form-group col-xs-12" ng-repeat="field in fields">
-                        <div class="input-group input-group-unstyled" class="col-sm-7">
-                            <label for="{{field.id}}">{{field.label}}</label>
-                            <div ng-switch on="field.type">
-                                <div class="" ng-switch-when="TEXT" id="{{field.id}}">
-                                    <input class="form-control" type="{{field.type}}"  placeholder="{{field.placeholder}}">
-                                </div>
-                                <div class="" ng-switch-when="TEXTAREA">
-                                    <textarea rows="6"></textarea>
-                                </div>
-                                <div class="" ng-switch-when="DATE">
-                                    <input class="form-control" type="date" placeholder="{{field.placeholder}}">
-                                </div>
-                                <div class="" ng-switch-when="OPTIONS">
-                                    <select class="col-xs-1 form-control">
-                                        <option ng-repeat="option in field.options" value="option.value">{{option.label}}</option>
-                                    </select>
-                                </div>
-                                <div class="" ng-switch-when="CHECKBOXES">
-                                    <div class="checkbox" ng-repeat="option in field.options" value="option.value">
-                                        <label>
-                                            <input type="checkbox"> {{option.label}}
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="" ng-switch-when="RADIOS">
-                                    <div class="radio" ng-repeat="option in field.options" value="option.value">
-                                        <label>
-                                            <input type="radio" name="choice" value="option.value"> {{option.label}}
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="" ng-switch-when="EMAIL">
-                                    <input type="email" class="form-control" id="inputEmail" placeholder="{{field.placeholder}}"/>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-sm-push-2">
-                                <a href=""><span class="glyphicon glyphicon-pencil input-group-addon" aria-hidden="true"></span></a>
-                                <a href="" ng-click="cloneField(field, $index)"><span class="glyphicon glyphicon-plus input-group-addon" aria-hidden="true"></span></a>
-                                <a href="" ng-click="removeField(field)"><span class="glyphicon glyphicon-remove input-group-addon" aria-hidden="true"></span></a>
-                                <a href=""><span class="glyphicon glyphicon-align-justify input-group-addon" aria-hidden="true"></span></a>
+<h1>Forms : Registration Form</h1>
+<div id="content">
+    <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+        <li><a>Forms</a></li>
+        <li class="active"><a>Fields</a></li>
+    </ul>
+    <div class="entry-box">
+        <form class="form-horizontal">
+            <div class="form-group">
+                <div class="row" ng-repeat="field in model.fields">
+                    <div ng-switch="field.fieldType">
+                        <div ng-switch-when="TEXT">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <input class="form-control" type="text" placeholder="{{ field.placeholder }}"></input>
                             </div>
                         </div>
-                    </div>
-
-                    <h2 class="sub-header"></h2>
-                    <br/>
-                    <div class="form-group col-xs-12 add-field">
-                        <div class="col-sm-7 input-group input-group-unstyled">
-                            <label for="newField" class="control-label">Add New Field</label>
-                            <select data-ng-model="newFieldType" class="form-control" id="newField">
-                                <option value="">No Fields Selected</option>
-                                <option value="slt">Single Line Text Field</option>
-                                <option value="mltf">Multi Line Text Field</option>
-                                <option value="date">Date Field</option>
-                                <option value="dropdown">Dropdown Field</option>
-                                <option value="checkboxes">Checkboxes Field</option>
-                                <option value="radio">Radio Buttons Field</option>
-                                <option value="email">New Email Field</option>
-                            </select>
+                        <div ng-switch-when="TEXTAREA">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <textarea class="form-control" placeholder="{{ field.placeholder }}"></textarea>
+                            </div>
                         </div>
-                        <div class="col-sm-3 col-sm-push-2">
-                            <a href="" ng-click="addField(newFieldType)">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            </a>
+                        <div ng-switch-when="EMAIL">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <input class="form-control" type="email" placeholder="{{ field.placeholder }}"></input>
+                            </div>
+                        </div>
+                        <div ng-switch-when="SELECT">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <select class="form-control">
+                                    <option ng-repeat="option in field.options" value="{{ option.value }}">{{ option.label }}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div ng-switch-when="CHECKBOXES">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <div class="checkbox" ng-repeat="checkbox in field.options">
+                                    <label>
+                                        <input type="checkbox" value="{{ checkbox.value }}"></input>{{ checkbox.label }}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="RADIOS">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <div class="radio" ng-repeat="radio in field.options">
+                                    <label>
+                                        <input type="radio" name="{{ field._id }}_radios" value="{{ radio.value }}"></input>{{ radio.label }}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="DATE">
+                            <label class="col-md-12 text-left">{{ field.label }}:</label>
+                            <div class="col-md-6">
+                                <input type="date" />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <a><span class="glyphicon glyphicon-pencil"></span></a>
+                            <a><span class="glyphicon glyphicon-plus"></span></a>
+                            <a ng-click="model.removeField(field)"><span class="glyphicon glyphicon-remove"></span></a>
+                            <a><span class="glyphicon glyphicon-align-justify"></span></a>
                         </div>
                     </div>
-                </form>
-                <span class="error">{{error}}</span>
+                </div>
+                <hr>
+                <label class="col-md-12 text-left">Add New Field:</label>
+                <div class="col-md-6 dropdown">
+                    <select class="form-control" ng-model="model.fieldType">
+                        <option value="slt">Single Line Text</option>
+                        <option value="date">Date</option>
+                        <option value="drdo">Dropdown</option>
+                        <option value="chbx">Checkboxes</option>
+                        <option value="rdbu">Radio Buttons</option>
+                        <option value="mlt">Multi Line Text</option>
+                    </select>
+                </div>
+                <div class="col-md-6">
+                    <a><span class="glyphicon glyphicon-none"></span></a>
+                    <a ng-click="model.addField(model.fieldType)"><span class="glyphicon glyphicon-plus"></span></a>
+                </div>
             </div>
-        </div>
-        <div ng-if="!selectedForm">
-            <h1 class="page-header">Fields: No Form Selected</h1>
-            <ul class="nav nav-tabs">
-                <li id="formsTab"><a href="#/forms">Forms</a></li>
-                <li id="fieldsTab" class="active"><a href="#/user">Fields</a></li>
-            </ul>
-            <span class="error">please select a form first to view and edit its fields</span>
-        </div>
-    </div>
-    <div ng-if="!user">
-        <h1 class="page-header">Please <a href="#/login">Login</a> to access this page.</h1>
+        </form>
     </div>
 </div>
