--- a/public/assignment/client/views/profile/profile.view.html
+++ b/public/assignment/client/views/profile/profile.view.html
@@ -1,6 +1,6 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <!-- if user exists -->
-    <div ng-if="user">
+    <!--<div ng-if="user">-->
         <h1 class="page-header">Profile</h1>
 
         <form class="form-horizontal">
@@ -37,17 +37,17 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <!--<a class="btn btn-default" href="profile.html" role="button">Update</a>-->
-                    <button type="submit" ng-click="update()" class="btn btn-default">Update</button>
+                    <button type="submit" ng-click="model.update(user)" class="btn btn-default">Update</button>
                 </div>
             </div>
         </form>
-    </div>
+    <!--</div>-->
 
     <!-- if user doesn't exists -->
-    <div class="container" ng-if="!user">
-        <div class="jumbotron">
-            <p>You must <a href="#/login">login</a> to access this page.</p>
-        </div>
-    </div>
+    <!--<div class="container" ng-if="!user">-->
+        <!--<div class="jumbotron">-->
+            <!--<p>You must <a href="#/login">login</a> to access this page.</p>-->
+        <!--</div>-->
+    <!--</div>-->
 
 </div>
