--- a/public/assignment/client/views/form/form.view.html
+++ b/public/assignment/client/views/form/form.view.html
@@ -1,61 +1,53 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <!-- if user exists -->
-    <!--<div ng-if="user">-->
-        <h1 class="page-header">Forms</h1>
-        <ul class="nav nav-tabs">
-            <li id="formsTab" class="active"><a href="#/forms">Forms</a></li>
-            <!--<li id="fieldsTab" ><a ng-href="#/user/{{user.id}}/form/null/fields" ng->Fields</a></li>-->
-            <!--<li role="presentation"><a href="form-fields.html">Fields</a>-->
-            <li role="presentation" class=active><a href="forms/form-fields.view.html">Fields</a></li>
-        </ul>
-        <br/> <br/>
-        <div id="Forms" class="table-responsive">
-            <table class="table table-striped" data-sortable="true" data-sort-name="name" data-sort-order="desc">
-                <thead>
-                <tr>
-                    <th data-field="name" data-sortable="true" aria-hidden="true"><i class="fa fa-fw fa-sort"></i>Form Name</th>
-                    <th data-field="password" data-sortable="true" aria-hidden="true"><i class="fa fa-fw fa-sort"></i>Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        <input type="text" class="form-control" placeholder="name" ng-model="model.form.title"/>
-                    </td>
-                    <td>
-                        <a href="#/forms" ng-click="model.addForm(model.form)">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true">&nbsp;</span>
-                        </a>
-                        <a href="#/forms" ng-click="model.updateForm(model.form)">
-                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                        </a>
-                    </td>
-                </tr>
-                <tr ng-repeat="form in model.forms">
-                    <!--<td onclick="location.href='form-fields.html'"> {{form.name}} </td>-->
-                    <!--<td> {{form.name}} </td>-->
-                    <!--<td>-->
-                    <!--<a ng-click="formFields(form)">{{form.title}}</a>-->
-                    <!--</td>-->
-                    <td><a href="#/user/{{ model.userId }}/form/{{ form._id }}/fields">{{ form.title }}</a></td>
-                    <td>
-                        <a href="#/forms" ng-click="model.deleteForm(form)">
-                            <span class="glyphicon glyphicon-remove">&nbsp;</span>
-                        </a>
-                        <a href="#/forms" ng-click="model.selectForm(form)">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    <!--</div>-->
+<div class="" ng-controller="FormController">
+  <!-- If User exists -->
+  <div class="" ng-if="user">
+    <h1 class="page-header">Forms</h1>
 
-    <!-- if user doesn't exists -->
-    <!--<div class="container" ng-if="!user">-->
-        <!--<div class="jumbotron">-->
-            <!--<p>You must <a href="#/login">login</a> to access this page.</p>-->
-        <!--</div>-->
-    <!--</div>-->
+    <ul class="nav nav-tabs">
+      <li id="formsTab" class="active"><a href="#/form">Forms</a></li>
+      <li id="fieldsTab" ><a ng-href="#/user/{{user.id}}/form/null/fields" ng->Fields</a></li>
+    </ul>
+
+    <div class="tab-content">
+      <div id="forms" class="tab-pane fade in active">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Form Name</th>
+                <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <input class="form-control" type="text" data-ng-model="formName"  id="searchName" placeholder="name"/>
+                </td>
+                <td>
+                  <a href="" ng-click="addForm(formName)">
+                    <span class="glyphicon glyphicon-plus" id="addForm" aria-hidden="true"></span>
+                  </a>
+                  <a href="" ng-click="updateForm(formName)">
+                    <span class="glyphicon glyphicon-ok" id="updateForm" aria-hidden="true"></span>
+                  </a>
+                </td>
+              </tr>
+              <tr ng-repeat="form in forms">
+                <td><a href="" ng-click="gotoFormFields(form)">{{form.title}}</a></td>
+                <td><a href="" ng-click="deleteForm(form.id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>      
+                <td><a href="" ng-click="selectForm(form)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>                  
+              </tr>
+            </tbody>
+          </table>
+          <span ng-if="error" class="error">{{error}}</span>
+          <span ng-if="success" class="success">{{success}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- if user doesn't exists -->
+  <div ng-if="!user">
+    <h1 class="page-header">Please <a href="#/login">Login</a> to access this page.</h1>
+  </div>
+
 </div>
