--- a/public/assignment/client/views/header/header.view.html
+++ b/public/assignment/client/views/header/header.view.html
@@ -1,25 +1,26 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController">
+<div class="app-header">
+  <nav class="navbar navbar-inverse navbar-fixed-top" data-ng-controller="HeaderController">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#/home">Form Maker</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <!--<li ng-class="{'active': selectedTab == 'home'}">   <a ng-click="selectedTab = 'home'"    href="#/home">Home</a></li>-->
-                <li ng-hide="model.registerShow()" ng-class="{'active': $location.url() == '/register'}"><a href="#/register" class="active">Register</a></li>
-                <li ng-hide="model.loginShow()" ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li ng-hide="model.isLogin()"><a href="#/profile">{{model.username}}</a></li>
-                <li ng-hide="model.logoutShow()"><a href="#/" ng-click="model.logout()">Logout</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
-        </div>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#/home">Form Maker</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li ng-if="!user" ng-class="{'active' : $location.url().indexOf('register') != -1}"><a href="#/register">Register</a></li>
+          <li ng-if="!user" ng-class="{'active' : $location.url().indexOf('login') != -1}"><a href="#/login">Login</a></li>
+          <li ng-if="user"><a href="#/profile">Username</a></li>
+          <li ng-if="user"><a href="#/" ng-click="logout()">Logout</a></li>
+        </ul>
+        <form class="navbar-form navbar-right">
+          <input type="text" class="form-control" placeholder="Search...">
+        </form>
+      </div>
     </div>
-</nav>
+  </nav>
+</div>
