--- a/public/assignment/client/views/profile/profile.view.html
+++ b/public/assignment/client/views/profile/profile.view.html
@@ -1,53 +1,56 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <!-- if user exists -->
-    <!--<div ng-if="user">-->
-        <h1 class="page-header">Profile</h1>
+<div class="" ng-controller="ProfileController">
+	<!-- If User exists -->
+	<div class="" ng-if="user" >
+		<h1 class="page-header">Profile</h1>
 
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" ng-model="user.username" id="inputEmail3" placeholder="Username">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" ng-model="user.password" id="inputPassword3" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" ng-model="user.firstName" id="inputEmail3" placeholder="First Name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" ng-model="user.lastName" id="inputEmail3" placeholder="Last Name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" ng-model="user.email" id="inputEmail3" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <!--<a class="btn btn-default" href="profile.html" role="button">Update</a>-->
-                    <button type="submit" ng-click="model.update(user)" class="btn btn-default">Update</button>
-                </div>
-            </div>
-        </form>
-    <!--</div>-->
+		<!-- FORM STARTS -->
+		<form class="form-horizontal">
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2">Username:</label>
+				<div class="col-sm-10">
+					<input type="text" data-ng-model="user.username" class="form-control" id="inputEmail3" placeholder="Username">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputPassword3" class="col-sm-2">Password:</label>
+				<div class="col-sm-10">
+					<input type="password" data-ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="fname" class="col-sm-2">First Name:</label>
+				<div class="col-sm-10">
+					<input type="text" data-ng-model="user.firstName" class="form-control" id="fname" placeholder="First Name">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="lname" class="col-sm-2">Last Name:</label>
+				<div class="col-sm-10">
+					<input type="text" data-ng-model="user.lastName" class="form-control" id="lname" placeholder="Last Name">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="email4" class="col-sm-2">Email:</label>
+				<div class="col-sm-10">
+					<input type="email" data-ng-model="user.email" class="form-control" id="email4" placeholder="Email">
+				</div>
+			</div>
+			<div class="error not-found" ng-if="error">
+				<span>{{error}}</span>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="submit" ng-click="update()" class="btn btn-default">Update</button>
+				</div>
+			</div>
+			<div class="success updated" ng-if="success">
+				<span>{{success}}</span>
+			</div>
+		</form>
+	</div>
 
-    <!-- if user doesn't exists -->
-    <!--<div class="container" ng-if="!user">-->
-        <!--<div class="jumbotron">-->
-            <!--<p>You must <a href="#/login">login</a> to access this page.</p>-->
-        <!--</div>-->
-    <!--</div>-->
-
+	<!-- if user doesn't exists -->
+	<div ng-if="!user">
+		<h1 class="page-header">Please <a href="#/login">Login</a> to access this page.</h1>
+	</div>
 </div>
