--- a/public/assignment/client/views/login/login.view.html
+++ b/public/assignment/client/views/login/login.view.html
@@ -1,28 +1,25 @@
-<div class="" ng-controller="LoginController">
-	<h1 class="page-header">Login</h1>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <h1 class="page-header">Login</h1>
 
-	<!-- FORM STARTS -->
-	<form class="form-horizontal">
-		<div class="form-group">
-			<label for="inputEmail3" class="col-sm-2">Username:</label>
-			<div class="col-sm-10">
-				<input type="text" data-ng-model="username" class="form-control" id="inputEmail3" placeholder="Username" required>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="inputPassword3" class="col-sm-2">Password:</label>
-			<div class="col-sm-10">
-				<input type="password" data-ng-model="password" class="form-control" id="inputPassword3" placeholder="Password" required>
-			</div>
-		</div>
-		<div class="error not-found" ng-if="error">
-			<span>{{error}}</span>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button type="submit" ng-click="login()" class="btn btn-default">Login</button>
-			</div>
-		</div>
-	</form>
-
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputEmail3" ng-model="username" placeholder="Username">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword3" ng-model="password" placeholder="Password">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <!--<a class="btn btn-default" href="profile.html" role="button">Login</a>-->
+                <!--<a  href="profile.html" role="button" ng-click="login()">Login</a>-->
+                <button type="submit" ng-click="login()" class="btn btn-default">Login</button>
+            </div>
+        </div>
+    </form>
 </div>
