Full Final Commit HW5 working properly

--- a/public/assignment/client/views/form/form.view.html
+++ b/public/assignment/client/views/form/form.view.html
@@ -20,7 +20,7 @@
                 <tbody>
                 <tr>
                     <td>
-                        <input type="text" class="form-control" placeholder="name" id="searchName" ng-model="formName"/>
+                        <input type="text" class="form-control" placeholder="name" id="title" ng-model="formName"/>
                     </td>
                     <td>
                         <a ng-click="addForm(formName)">
