--- a/public/assignment/client/views/field/field.view.html
+++ b/public/assignment/client/views/field/field.view.html
@@ -72,10 +72,10 @@
                                     <select ng-model="newFieldType" name="select" id="add-new-field">
                                         <option value="">No Fields Selected</option>
                                         <option value="slt">Single Line Text Field</option>
-                                        <option value="mltf">Multi Line Text Field</option>
+                                        <option value="mlt">Multi Line Text Field</option>
                                         <option value="date">Date Field</option>
                                         <option value="dropdown">Dropdown Field</option>
-                                        <option value="checkboxes">Checkboxes Field</option>
+                                        <option value="checkbox">Checkboxes Field</option>
                                         <option value="radio">Radio Buttons Field</option>
                                         <option value="email">New Email Field</option>
                                     </select>
