--- a/public/assignment/client/views/header/header.view.html
+++ b/public/assignment/client/views/header/header.view.html
@@ -13,7 +13,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="!user" ng-class="{'active': $location.url() == '/register'}"><a href="#/register" class="active">Register</a></li>
                 <li ng-if="!user" ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li ng-if="user"><a href="#/profile">Username</a></li>
+                <li ng-if="user" ng-hide="isLogin()"><a href="#/profile">{{username}}</a></li>
                 <li ng-if="user"><a href="#/" ng-click="logout()">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
