Added geo-trends and user search hopefully it works

--- a/public/project/client/views/sidebar/sidebar-widgets/sidebar-profile/sidebar-profile.html
+++ b/public/project/client/views/sidebar/sidebar-widgets/sidebar-profile/sidebar-profile.html
@@ -1,5 +1,6 @@
-<div class="text-center"> 
+<div class="text-center">
 	<a ui-sref="profile"><img src="images/flat-avatar.png" class="user-avatar" /></a>
-	<div class="text-center avatar-name">Ani Pascal
+    <a ui-sref="profile"></a>
+	<div class="text-center avatar-name">Twitter User
 	</div>
 </div>
