--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -1,21 +1,21 @@
 <div class="login-page">
 	<div class="row">
 		<div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
-        	<img src="images/flat-avatar.png" class="user-avatar" />
+        	<img src="images/twitterlogin.png" class="user-avatar" />
 			<h1>TrendsCaster</h1>
 			<form role="form">
-				<div class="form-content">
-					<div class="form-group">
-						<input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="{{ 'email' }}">
-					</div>
+				<!--<div class="form-content">-->
+					<!--<div class="form-group">-->
+						<!--<input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="{{ 'email' }}">-->
+					<!--</div>-->
 
-					<div class="form-group">
-						<input type="password" class="form-control input-underline input-lg" id="" placeholder="{{ 'password' }}">
-					</div>
-				</div>
-				<button ng-click="submit()" class="btn btn-white btn-outline btn-lg btn-rounded progress-login" progress-button="authenticate()">{{ 'login' }}</button>
+					<!--<div class="form-group">-->
+						<!--<input type="password" class="form-control input-underline input-lg" id="" placeholder="{{ 'password' }}">-->
+					<!--</div>-->
+				<!--</div>-->
+				<button ng-click="submit()" class="btn btn-white btn-outline btn-lg btn-rounded progress-login" progress-button="authenticate()">{{ 'login with twitter' }}</button>
 				&nbsp;
-				<a ui-sref="signup"><button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">{{ 'registerhere' }}</button></a>
+				<!--<a ui-sref="signup"><button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">{{ 'registerhere' }}</button></a>-->
 			</form>
 		</div>
 	</div>
