--- a/public/project/client/views/sidebar/menu-bar/menu-bar.html
+++ b/public/project/client/views/sidebar/menu-bar/menu-bar.html
@@ -9,56 +9,64 @@
 					<li><a ng-class="{active: $state.includes('home')}" ui-sref="home">{{ 'dashboard' }}</a></li>
 				</ul>
 			</li>
-			<li ng-class="{active: $state.includes('typography')}">
-				<a ui-sref="typography">
-				<span class="glyphicon glyphicon-text-size"></span>
-				</a>
-				<ul class="nested-dropdown animated fadeIn">
-					<li><a ng-class="{active: $state.includes('typography')}" ui-sref="typography">{{ 'typography' }}</a></li>
-				</ul>
-			</li>
-			<li ng-class="{active: $state.includes('grid')}">
-				<a ui-sref="grid">
-				<span class="glyphicon glyphicon-th-large"></span>
-				</a>
-				<ul class="nested-dropdown animated fadeIn">
-					<li><a ui-sref="grid">{{ 'grid' }}</a></li>
-				</ul>
-			</li>
-			<li ng-class="{active: $state.includes('table')}">
-				<a ui-sref="table">
-				<span class="glyphicon glyphicon-list"></span>
-				</a>
-				<ul class="nested-dropdown animated fadeIn">
-					<li><a ng-class="{active: $state.includes('table')}" ui-sref="table">{{ 'table' }}</a></li>
-				</ul>
-			</li>
-			<li ng-class="{active: $state.includes('form')}">
-				<a ui-sref="elements">
-					<span class="glyphicon glyphicon-equalizer"></span>
-				</a>
-				<ul class="nested-dropdown animated fadeIn">
-					<li class="sidemenu-header">{{ 'form' | translate }}</li>
-					<li><a ng-class="{active: $state.includes('form')}" ui-sref="elements">{{ 'elements' }}</a></li>
-					<li><a ng-class="{active: $state.includes('form')}" ui-sref="components">{{ 'components' }}</a></li>
-				</ul>
-			</li>
-			<li ng-class="{active: $state.includes('ui-interface')}">
-				<a ui-sref="button">
-				<span class="glyphicon glyphicon-cloud-download"></span>
-				</a>
-				<ul class="nested-dropdown animated fadeIn">
-					<li class="sidemenu-header">{{ 'user_interface' }}</li>
-					<li><a ui-sref="button">{{ 'buttons' }}</a></li>
-					<li><a ui-sref="dropdown">{{ 'dropdown' }}</a></li>
-					<li><a ui-sref="icons">{{ 'icons' }}</a></li>
-					<li><a ui-sref="panels">{{ 'panels' }}</a></li>
-					<li><a ui-sref="alerts">{{ 'alerts' }}</a></li>
-					<li><a ui-sref="progressbars">{{ 'progressbars' }}</a></li>
-					<li><a ui-sref="pagination">{{ 'pagination' }}</a></li>
-					<li><a ui-sref="other-elements">{{ 'other_elements' }}</a></li>
-				</ul>
-			</li>
+			<!--<li ng-class="{active: $state.includes('typography')}">-->
+				<!--<a ui-sref="typography">-->
+				<!--<span class="glyphicon glyphicon-text-size"></span>-->
+				<!--</a>-->
+				<!--<ul class="nested-dropdown animated fadeIn">-->
+					<!--<li><a ng-class="{active: $state.includes('typography')}" ui-sref="typography">{{ 'typography' }}</a></li>-->
+				<!--</ul>-->
+			<!--</li>-->
+			<!--<li ng-class="{active: $state.includes('grid')}">-->
+				<!--<a ui-sref="grid">-->
+				<!--<span class="glyphicon glyphicon-th-large"></span>-->
+				<!--</a>-->
+				<!--<ul class="nested-dropdown animated fadeIn">-->
+					<!--<li><a ui-sref="grid">{{ 'grid' }}</a></li>-->
+				<!--</ul>-->
+			<!--</li>-->
+			<!--<li ng-class="{active: $state.includes('table')}">-->
+				<!--<a ui-sref="table">-->
+				<!--<span class="glyphicon glyphicon-list"></span>-->
+				<!--</a>-->
+				<!--<ul class="nested-dropdown animated fadeIn">-->
+					<!--<li><a ng-class="{active: $state.includes('table')}" ui-sref="table">{{ 'table' }}</a></li>-->
+				<!--</ul>-->
+			<!--</li>-->
+            <!--<li ng-class="{active: $state.includes('trending')}">-->
+                <!--<a ui-sref="table">-->
+                    <!--<span class="glyphicon glyphicon-list"></span>-->
+                <!--</a>-->
+                <!--<ul class="nested-dropdown animated fadeIn">-->
+                    <!--<li><a ng-class="{active: $state.includes('trending')}" ui-sref="table">{{ 'trending' }}</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
+			<!--<li ng-class="{active: $state.includes('form')}">-->
+				<!--<a ui-sref="elements">-->
+					<!--<span class="glyphicon glyphicon-equalizer"></span>-->
+				<!--</a>-->
+				<!--<ul class="nested-dropdown animated fadeIn">-->
+					<!--<li class="sidemenu-header">{{ 'form' | translate }}</li>-->
+					<!--<li><a ng-class="{active: $state.includes('form')}" ui-sref="elements">{{ 'elements' }}</a></li>-->
+					<!--<li><a ng-class="{active: $state.includes('form')}" ui-sref="components">{{ 'components' }}</a></li>-->
+				<!--</ul>-->
+			<!--</li>-->
+			<!--<li ng-class="{active: $state.includes('ui-interface')}">-->
+				<!--<a ui-sref="button">-->
+				<!--<span class="glyphicon glyphicon-cloud-download"></span>-->
+				<!--</a>-->
+				<!--<ul class="nested-dropdown animated fadeIn">-->
+					<!--<li class="sidemenu-header">{{ 'user_interface' }}</li>-->
+					<!--<li><a ui-sref="button">{{ 'buttons' }}</a></li>-->
+					<!--<li><a ui-sref="dropdown">{{ 'dropdown' }}</a></li>-->
+					<!--<li><a ui-sref="icons">{{ 'icons' }}</a></li>-->
+					<!--<li><a ui-sref="panels">{{ 'panels' }}</a></li>-->
+					<!--<li><a ui-sref="alerts">{{ 'alerts' }}</a></li>-->
+					<!--<li><a ui-sref="progressbars">{{ 'progressbars' }}</a></li>-->
+					<!--<li><a ui-sref="pagination">{{ 'pagination' }}</a></li>-->
+					<!--<li><a ui-sref="other-elements">{{ 'other_elements' }}</a></li>-->
+				<!--</ul>-->
+			<!--</li>-->
 			<li ng-class="{active: $state.includes('charts')}">
 				<a ui-sref="chartjs">
 				<span class="glyphicon glyphicon-signal"></span>
@@ -69,22 +77,22 @@
 					<li><a ui-sref="c3chart">C3.js</a></li>
 				</ul>
 			</li>
-			<li ng-class="{active: $state.includes('calendar')}">
-				<a ui-sref="calendar">
-				<span class="glyphicon glyphicon-calendar"></span>
-				</a>
-				<ul class="nested-dropdown animated fadeIn">
-					<li><a ui-sref="calendar">{{ 'calendar' }}</a></li>
-				</ul>
-			</li>
+			<!--<li ng-class="{active: $state.includes('calendar')}">-->
+				<!--<a ui-sref="calendar">-->
+				<!--<span class="glyphicon glyphicon-calendar"></span>-->
+				<!--</a>-->
+				<!--<ul class="nested-dropdown animated fadeIn">-->
+					<!--<li><a ui-sref="calendar">{{ 'calendar' }}</a></li>-->
+				<!--</ul>-->
+			<!--</li>-->
 			<li ng-class="{active: $state.includes('mail')}">
 				<a ui-sref="inbox">
 				<span class="glyphicon glyphicon-envelope"></span>
 				</a>
 				<ul class="nested-dropdown animated fadeIn">
-					<li class="sidemenu-header">{{ 'mail' }}</li>
-					<li><a ui-sref="inbox">{{ 'inbox' }}</a></li>
-					<li><a ui-sref="compose">{{ 'compose' }}</a></li>
+					<li class="sidemenu-header">{{ 'ToDo' }}</li>
+					<li><a ui-sref="inbox">{{ 'Tasks' }}</a></li>
+					<li><a ui-sref="compose">{{ 'Set Reminders' }}</a></li>
 				</ul>
 			</li>
 			<li ng-class="{active: $state.includes('invoice')}">
@@ -101,7 +109,8 @@
 				</a>
 				<ul class="nested-dropdown animated fadeIn">
 					<li class="sidemenu-header">{{ 'pages' }}</li>
-					<li><a ui-sref="blank">{{ 'blankpage' }}</a></li>
+					<li><a ui-sref="trending">{{ 'trending' }}</a></li>
+                    <li><a ui-sref="tweets">{{ 'tweets' }}</a></li>
 					<li><a ui-sref="login">{{ 'login' }}</a></li>
 					<li><a ui-sref="signup">{{ 'signup' }}</a></li>
 					<li><a ui-sref="404-page">{{ '404page' }}</a></li>
