Made changes to index.html-project and refactored geotrend services

--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -13,8 +13,10 @@
 						<!--<input type="password" class="form-control input-underline input-lg" id="" placeholder="{{ 'password' }}">-->
 					<!--</div>-->
 				<!--</div>-->
-				<button ng-click="submit()" class="btn btn-white btn-outline btn-lg btn-rounded progress-login" progress-button="authenticate()">{{ 'login with twitter' }}</button>
+				<!--<button ng-click="submit()" class="btn btn-white btn-outline btn-lg btn-rounded progress-login" progress-button="authenticate()">{{ 'login with twitter' }}</button>-->
 				&nbsp;
+                <!--<a ui-sref="/auth/twitter"><button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">{{ 'Login With Twitter' }}</button></a>-->
+                <a href="/auth/twitter">{{ 'Login With Twitter' }}</a>
 				<!--<a ui-sref="signup"><button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">{{ 'registerhere' }}</button></a>-->
 			</form>
 		</div>
