--- a/public/project/client/views/dashboard/home/home.view.html
+++ b/public/project/client/views/dashboard/home/home.view.html
@@ -8,6 +8,9 @@
 				<stats icon="flag" value="12,351" text="{{ 'stat3' | translate }}" bgclass="danger" link="inbox" progress-value="72"></stats>
 			</div>
 		</div>
+        <div>
+            {{user}}
+        </div>
 		<div class="col-md-4 col-lg-6">
 			<div class="home-charts-middle">
 				<div class="chart-container">
@@ -27,12 +30,12 @@
 					</div>
 
 					<c3chart bindto-id="line-chart">
-					    <chart-column column-id="{{ 'chart1' | translate }}" column-values="2,13,27,16,17,15,58" column-type="line"/>  
-					    <chart-column column-id="{{ 'chart2' | translate }}" column-values="6,17,36,12,36,27,40" column-type="line"/>  
-					    <chart-column column-id="{{ 'chart3' | translate }}" column-values="10,19,29,11,30,22,28" column-type="line"/>  
-					    <chart-legend show-legend="true"/>  
-					    <chart-tooltip-show-tooltip="false"/>					   
-					    <chart-colors color-pattern="#3CA2E0, #7BB77D, #f0ad4e "/>  
+					    <chart-column column-id="{{ 'chart1' | translate }}" column-values="2,13,27,16,17,15,58" column-type="line"/>
+					    <chart-column column-id="{{ 'chart2' | translate }}" column-values="6,17,36,12,36,27,40" column-type="line"/>
+					    <chart-column column-id="{{ 'chart3' | translate }}" column-values="10,19,29,11,30,22,28" column-type="line"/>
+					    <chart-legend show-legend="true"/>
+					    <chart-tooltip-show-tooltip="false"/>
+					    <chart-colors color-pattern="#3CA2E0, #7BB77D, #f0ad4e "/>
 					    <chart-size chart-height="260" width="100%" />
 					    <chart-axis>
 					        <chart-axis-x show="false"></chart-axis-x>
@@ -46,16 +49,16 @@
 			<div class="home-charts-right">
 				<div class="top-right-chart">
 					<c3chart bindto-id="bar-chart">
-					    <chart-column column-id="Users" column-values="33,27,36,47,55,37,32,39,28,21,37,42,32,26,18" column-type="bar"/>  
-					    <chart-legend show-legend="false"/>  
-					    <chart-tooltip-show-tooltip="false"/>					   
-					    <chart-colors color-pattern="#d9534f"/>  
+					    <chart-column column-id="Users" column-values="33,27,36,47,55,37,32,39,28,21,37,42,32,26,18" column-type="bar"/>
+					    <chart-legend show-legend="false"/>
+					    <chart-tooltip-show-tooltip="false"/>
+					    <chart-colors color-pattern="#d9534f"/>
 					    <chart-size chart-height="156" width="400" />
 					    <chart-axis>
 					        <chart-axis-x show="false"></chart-axis-x>
 					        <chart-axis-y show="false"></chart-axis-y>
 					    </chart-axis>
-					</c3chart>					
+					</c3chart>
 				</div>
 				<div class="bottom-right-chart">
 					<div class="top-left-chart clearfix">
@@ -68,17 +71,17 @@
 							</div>
 							<div class="col-sm-6">
 								<c3chart bindto-id="pie-chart">
-								    <chart-column column-id="New" column-values="10" column-type="pie"/>    
-					                <chart-column column-id="Returning" column-values="30" column-type="pie"/>      
-								    <chart-column column-id="Referral" column-values="5" column-type="pie"/>  					    
-								    <chart-legend show-legend="false"/> 
-								    <chart-tooltip-show-tooltip="false"/>	 
-								    <chart-colors color-pattern="#5CB85C,#3CA2E0,#f0ad4e"/>  
-								    <chart-size chart-height="118" chart-width="100"/>	
+								    <chart-column column-id="New" column-values="10" column-type="pie"/>
+					                <chart-column column-id="Returning" column-values="30" column-type="pie"/>
+								    <chart-column column-id="Referral" column-values="5" column-type="pie"/>
+								    <chart-legend show-legend="false"/>
+								    <chart-tooltip-show-tooltip="false"/>
+								    <chart-colors color-pattern="#5CB85C,#3CA2E0,#f0ad4e"/>
+								    <chart-size chart-height="118" chart-width="100"/>
 								</c3chart>
 							</div>
 						</div>
-					</div>	
+					</div>
 				</div>
 			</div>
 		</div>
