Able to get data to the home

--- a/public/project/client/views/sidebar/menu-bar/menu-bar.html
+++ b/public/project/client/views/sidebar/menu-bar/menu-bar.html
@@ -111,6 +111,7 @@
 					<li class="sidemenu-header">{{ 'pages' }}</li>
 					<li><a ui-sref="trending">{{ 'trending' }}</a></li>
                     <li><a ui-sref="tweets">{{ 'tweets' }}</a></li>
+                    <li><a ui-sref="sentiment">{{ 'sentiment' }}</a></li>
 					<li><a ui-sref="login">{{ 'login' }}</a></li>
 					<li><a ui-sref="signup">{{ 'signup' }}</a></li>
 					<li><a ui-sref="404-page">{{ '404page' }}</a></li>
